parser.output
Terminals unused in grammar

    T_BOOL_LITERAL
    T_ELIF
    T_READ
    T_NULL
    T_INCLUDE
    T_AND_ASSIGN
    T_OR_ASSIGN
    T_XOR_ASSIGN
    T_LSHIFT_ASSIGN
    T_RSHIFT_ASSIGN
    T_DOT
    T_QUOTES


State 14 conflicts: 2 shift/reduce
State 72 conflicts: 1 shift/reduce
State 166 conflicts: 1 shift/reduce
State 237 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_declaration_list

    2 global_declaration_list: ε
    3                        | global_declaration_list global_declaration

    4 global_declaration: function_declaration
    5                   | variable_declaration
    6                   | array_declaration
    7                   | pointer_declaration

    8 function_declaration: T_FUNCTION base_type T_IDENTIFIER T_LPAREN parameter_list T_RPAREN block
    9                     | T_FUNCTION T_IDENTIFIER T_LPAREN parameter_list T_RPAREN block

   10 parameter_list: ε
   11               | parameter
   12               | parameter_list T_COMMA parameter

   13 parameter: base_type T_IDENTIFIER
   14          | type T_IDENTIFIER

   15 type: base_type
   16     | type T_MULTIPLY
   17     | type T_LBRACKET T_RBRACKET
   18     | type T_LBRACKET expression T_RBRACKET

   19 base_type: T_INT
   20          | T_FLOAT
   21          | T_STRING
   22          | T_CHAR
   23          | T_BOOL
   24          | T_VOID

   25 block: T_LBRACE statement_list T_RBRACE

   26 statement_list: ε
   27               | statement_list statement

   28 statement: variable_declaration
   29          | array_declaration
   30          | pointer_declaration
   31          | assignment_statement
   32          | if_statement
   33          | while_statement
   34          | for_statement
   35          | do_while_statement
   36          | switch_statement
   37          | return_statement
   38          | break_statement
   39          | continue_statement
   40          | print_statement
   41          | expression_statement
   42          | T_SEMICOLON

   43 variable_declaration: base_type T_IDENTIFIER T_SEMICOLON
   44                     | base_type T_IDENTIFIER T_ASSIGN expression T_SEMICOLON

   45 array_declaration: type T_IDENTIFIER T_LBRACKET expression T_RBRACKET T_SEMICOLON
   46                  | type T_IDENTIFIER T_LBRACKET T_RBRACKET T_ASSIGN array_initializer T_SEMICOLON
   47                  | base_type T_IDENTIFIER T_LBRACKET expression T_RBRACKET T_SEMICOLON

   48 array_initializer: T_LBRACE expression_list T_RBRACE
   49                  | T_LBRACE T_RBRACE

   50 expression_list: expression
   51                | expression_list T_COMMA expression

   52 pointer_declaration: base_type T_MULTIPLY T_IDENTIFIER T_SEMICOLON
   53                    | base_type T_MULTIPLY T_IDENTIFIER T_ASSIGN expression T_SEMICOLON

   54 assignment_statement: T_IDENTIFIER assignment_operator expression T_SEMICOLON
   55                     | T_IDENTIFIER T_LBRACKET expression T_RBRACKET assignment_operator expression T_SEMICOLON

   56 assignment_operator: T_ASSIGN
   57                    | T_PLUS_ASSIGN
   58                    | T_MINUS_ASSIGN
   59                    | T_MULT_ASSIGN
   60                    | T_DIV_ASSIGN
   61                    | T_MOD_ASSIGN

   62 if_statement: T_IF T_LPAREN expression T_RPAREN statement
   63             | T_IF T_LPAREN expression T_RPAREN statement T_ELSE statement

   64 while_statement: T_WHILE T_LPAREN expression T_RPAREN statement

   65 for_statement: T_FOR T_LPAREN for_init T_SEMICOLON expression T_SEMICOLON for_update T_RPAREN statement

   66 for_init: ε
   67         | variable_declaration
   68         | expression

   69 for_update: ε
   70           | expression

   71 do_while_statement: T_DO statement T_WHILE T_LPAREN expression T_RPAREN T_SEMICOLON

   72 switch_statement: T_SWITCH T_LPAREN expression T_RPAREN T_LBRACE case_list default_case T_RBRACE

   73 case_list: ε
   74          | case_list case_statement

   75 case_statement: T_CASE expression T_COLON statement_list

   76 default_case: ε
   77             | T_DEFAULT T_COLON statement_list

   78 return_statement: T_RETURN T_SEMICOLON
   79                 | T_RETURN expression T_SEMICOLON

   80 break_statement: T_BREAK T_SEMICOLON

   81 continue_statement: T_CONTINUE T_SEMICOLON

   82 print_statement: T_PRINT expression T_SEMICOLON

   83 expression_statement: expression T_SEMICOLON

   84 expression: assignment_expression

   85 assignment_expression: ternary_expression

   86 ternary_expression: logical_or_expression
   87                   | logical_or_expression T_QUESTION expression T_COLON ternary_expression

   88 logical_or_expression: logical_and_expression
   89                      | logical_or_expression T_OR logical_and_expression

   90 logical_and_expression: bitwise_or_expression
   91                       | logical_and_expression T_AND bitwise_or_expression

   92 bitwise_or_expression: bitwise_xor_expression
   93                      | bitwise_or_expression T_BIT_OR bitwise_xor_expression

   94 bitwise_xor_expression: bitwise_and_expression
   95                       | bitwise_xor_expression T_BIT_XOR bitwise_and_expression

   96 bitwise_and_expression: equality_expression
   97                       | bitwise_and_expression T_BIT_AND equality_expression

   98 equality_expression: relational_expression
   99                    | equality_expression T_EQUAL relational_expression
  100                    | equality_expression T_NOT_EQUAL relational_expression

  101 relational_expression: shift_expression
  102                      | relational_expression T_GREATER_THAN shift_expression
  103                      | relational_expression T_LESS_THAN shift_expression
  104                      | relational_expression T_GREATER_THAN_EQUAL shift_expression
  105                      | relational_expression T_LESS_THAN_EQUAL shift_expression

  106 shift_expression: additive_expression
  107                 | shift_expression T_LEFT_SHIFT additive_expression
  108                 | shift_expression T_RIGHT_SHIFT additive_expression

  109 additive_expression: multiplicative_expression
  110                    | additive_expression T_PLUS multiplicative_expression
  111                    | additive_expression T_MINUS multiplicative_expression

  112 multiplicative_expression: unary_expression
  113                          | multiplicative_expression T_MULTIPLY unary_expression
  114                          | multiplicative_expression T_DIVIDE unary_expression
  115                          | multiplicative_expression T_MODULO unary_expression

  116 unary_expression: postfix_expression
  117                 | T_NOT unary_expression
  118                 | T_MINUS unary_expression
  119                 | T_BIT_NOT unary_expression
  120                 | T_INCREMENT unary_expression
  121                 | T_DECREMENT unary_expression
  122                 | T_MULTIPLY unary_expression
  123                 | T_BIT_AND unary_expression

  124 postfix_expression: primary_expression
  125                   | postfix_expression T_INCREMENT
  126                   | postfix_expression T_DECREMENT
  127                   | postfix_expression T_LBRACKET expression T_RBRACKET
  128                   | postfix_expression T_LPAREN argument_list T_RPAREN

  129 primary_expression: literal
  130                   | T_IDENTIFIER
  131                   | T_LPAREN expression T_RPAREN

  132 literal: T_INT_LITERAL
  133        | T_FLOAT_LITERAL
  134        | T_STRING_LITERAL
  135        | T_CHAR_LITERAL
  136        | T_TRUE
  137        | T_FALSE
  138        | T_NULL_LITERAL
  139        | T_HEX_LITERAL
  140        | T_OCTAL_LITERAL
  141        | T_BINARY_LITERAL

  142 argument_list: ε
  143              | expression
  144              | argument_list T_COMMA expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_IDENTIFIER <str_val> (258) 8 9 13 14 43 44 45 46 47 52 53 54 55 130
    T_INT_LITERAL <str_val> (259) 132
    T_FLOAT_LITERAL <str_val> (260) 133
    T_STRING_LITERAL <str_val> (261) 134
    T_CHAR_LITERAL <str_val> (262) 135
    T_BOOL_LITERAL <str_val> (263)
    T_NULL_LITERAL <str_val> (264) 138
    T_HEX_LITERAL <str_val> (265) 139
    T_OCTAL_LITERAL <str_val> (266) 140
    T_BINARY_LITERAL <str_val> (267) 141
    T_FUNCTION (268) 8 9
    T_INT (269) 19
    T_FLOAT (270) 20
    T_STRING (271) 21
    T_BOOL (272) 23
    T_CHAR (273) 22
    T_VOID (274) 24
    T_IF (275) 62 63
    T_ELSE (276) 63
    T_ELIF (277)
    T_WHILE (278) 64 71
    T_FOR (279) 65
    T_DO (280) 71
    T_SWITCH (281) 72
    T_CASE (282) 75
    T_DEFAULT (283) 77
    T_RETURN (284) 78 79
    T_BREAK (285) 80
    T_CONTINUE (286) 81
    T_PRINT (287) 82
    T_READ (288)
    T_TRUE (289) 136
    T_FALSE (290) 137
    T_NULL (291)
    T_INCLUDE (292)
    T_PLUS (293) 110
    T_MINUS (294) 111 118
    T_MULTIPLY (295) 16 52 53 113 122
    T_DIVIDE (296) 114
    T_MODULO (297) 115
    T_EQUAL (298) 99
    T_NOT_EQUAL (299) 100
    T_GREATER_THAN (300) 102
    T_LESS_THAN (301) 103
    T_GREATER_THAN_EQUAL (302) 104
    T_LESS_THAN_EQUAL (303) 105
    T_AND (304) 91
    T_OR (305) 89
    T_NOT (306) 117
    T_BIT_AND (307) 97 123
    T_BIT_OR (308) 93
    T_BIT_XOR (309) 95
    T_BIT_NOT (310) 119
    T_LEFT_SHIFT (311) 107
    T_RIGHT_SHIFT (312) 108
    T_ASSIGN (313) 44 46 53 56
    T_PLUS_ASSIGN (314) 57
    T_MINUS_ASSIGN (315) 58
    T_MULT_ASSIGN (316) 59
    T_DIV_ASSIGN (317) 60
    T_MOD_ASSIGN (318) 61
    T_AND_ASSIGN (319)
    T_OR_ASSIGN (320)
    T_XOR_ASSIGN (321)
    T_LSHIFT_ASSIGN (322)
    T_RSHIFT_ASSIGN (323)
    T_INCREMENT (324) 120 125
    T_DECREMENT (325) 121 126
    T_COMMA (326) 12 51 144
    T_SEMICOLON (327) 42 43 44 45 46 47 52 53 54 55 65 71 78 79 80 81 82 83
    T_COLON (328) 75 77 87
    T_DOT (329)
    T_LPAREN (330) 8 9 62 63 64 65 71 72 128 131
    T_RPAREN (331) 8 9 62 63 64 65 71 72 128 131
    T_LBRACE (332) 25 48 49 72
    T_RBRACE (333) 25 48 49 72
    T_LBRACKET (334) 17 18 45 46 47 55 127
    T_RBRACKET (335) 17 18 45 46 47 55 127
    T_QUESTION (336) 87
    T_QUOTES (337)
    UNARY (338)


Nonterminals, with rules where they appear

    $accept (84)
        on left: 0
    program <program_node> (85)
        on left: 1
        on right: 0
    global_declaration_list <decl_list> (86)
        on left: 2 3
        on right: 1 3
    global_declaration <decl_wrapper> (87)
        on left: 4 5 6 7
        on right: 3
    function_declaration <function_node> (88)
        on left: 8 9
        on right: 4
    parameter_list <param_list> (89)
        on left: 10 11 12
        on right: 8 9 12
    parameter <parameter_node> (90)
        on left: 13 14
        on right: 11 12
    type <str_val> (91)
        on left: 15 16 17 18
        on right: 14 16 17 18 45 46
    base_type <str_val> (92)
        on left: 19 20 21 22 23 24
        on right: 8 13 15 43 44 47 52 53
    block <block_node> (93)
        on left: 25
        on right: 8 9
    statement_list <stmt_list> (94)
        on left: 26 27
        on right: 25 27 75 77
    statement <statement_node> (95)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 27 62 63 64 65 71
    variable_declaration <var_decl_node> (96)
        on left: 43 44
        on right: 5 28 67
    array_declaration <array_decl_node> (97)
        on left: 45 46 47
        on right: 6 29
    array_initializer <array_init_node> (98)
        on left: 48 49
        on right: 46
    expression_list <expr_list> (99)
        on left: 50 51
        on right: 48 51
    pointer_declaration <pointer_decl_node> (100)
        on left: 52 53
        on right: 7 30
    assignment_statement <statement_node> (101)
        on left: 54 55
        on right: 31
    assignment_operator <str_val> (102)
        on left: 56 57 58 59 60 61
        on right: 54 55
    if_statement <statement_node> (103)
        on left: 62 63
        on right: 32
    while_statement <statement_node> (104)
        on left: 64
        on right: 33
    for_statement <statement_node> (105)
        on left: 65
        on right: 34
    for_init <statement_node> (106)
        on left: 66 67 68
        on right: 65
    for_update <statement_node> (107)
        on left: 69 70
        on right: 65
    do_while_statement <statement_node> (108)
        on left: 71
        on right: 35
    switch_statement <statement_node> (109)
        on left: 72
        on right: 36
    case_list <case_list> (110)
        on left: 73 74
        on right: 72 74
    case_statement <case_node> (111)
        on left: 75
        on right: 74
    default_case <default_node> (112)
        on left: 76 77
        on right: 72
    return_statement <statement_node> (113)
        on left: 78 79
        on right: 37
    break_statement <statement_node> (114)
        on left: 80
        on right: 38
    continue_statement <statement_node> (115)
        on left: 81
        on right: 39
    print_statement <statement_node> (116)
        on left: 82
        on right: 40
    expression_statement <statement_node> (117)
        on left: 83
        on right: 41
    expression <expression_node> (118)
        on left: 84
        on right: 18 44 45 47 50 51 53 54 55 62 63 64 65 68 70 71 72 75 79 82 83 87 127 131 143 144
    assignment_expression <expression_node> (119)
        on left: 85
        on right: 84
    ternary_expression <expression_node> (120)
        on left: 86 87
        on right: 85 87
    logical_or_expression <expression_node> (121)
        on left: 88 89
        on right: 86 87 89
    logical_and_expression <expression_node> (122)
        on left: 90 91
        on right: 88 89 91
    bitwise_or_expression <expression_node> (123)
        on left: 92 93
        on right: 90 91 93
    bitwise_xor_expression <expression_node> (124)
        on left: 94 95
        on right: 92 93 95
    bitwise_and_expression <expression_node> (125)
        on left: 96 97
        on right: 94 95 97
    equality_expression <expression_node> (126)
        on left: 98 99 100
        on right: 96 97 99 100
    relational_expression <expression_node> (127)
        on left: 101 102 103 104 105
        on right: 98 99 100 102 103 104 105
    shift_expression <expression_node> (128)
        on left: 106 107 108
        on right: 101 102 103 104 105 107 108
    additive_expression <expression_node> (129)
        on left: 109 110 111
        on right: 106 107 108 110 111
    multiplicative_expression <expression_node> (130)
        on left: 112 113 114 115
        on right: 109 110 111 113 114 115
    unary_expression <expression_node> (131)
        on left: 116 117 118 119 120 121 122 123
        on right: 112 113 114 115 117 118 119 120 121 122 123
    postfix_expression <expression_node> (132)
        on left: 124 125 126 127 128
        on right: 116 125 126 127 128
    primary_expression <expression_node> (133)
        on left: 129 130 131
        on right: 124
    literal <expression_node> (134)
        on left: 132 133 134 135 136 137 138 139 140 141
        on right: 129
    argument_list <expr_list> (135)
        on left: 142 143 144
        on right: 128 144


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (global_declaration_list)

    program                  go to state 1
    global_declaration_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: global_declaration_list •
    3 global_declaration_list: global_declaration_list • global_declaration

    T_FUNCTION  shift, and go to state 4
    T_INT       shift, and go to state 5
    T_FLOAT     shift, and go to state 6
    T_STRING    shift, and go to state 7
    T_BOOL      shift, and go to state 8
    T_CHAR      shift, and go to state 9
    T_VOID      shift, and go to state 10

    $default  reduce using rule 1 (program)

    global_declaration    go to state 11
    function_declaration  go to state 12
    type                  go to state 13
    base_type             go to state 14
    variable_declaration  go to state 15
    array_declaration     go to state 16
    pointer_declaration   go to state 17


State 3

    0 $accept: program $end •

    $default  accept


State 4

    8 function_declaration: T_FUNCTION • base_type T_IDENTIFIER T_LPAREN parameter_list T_RPAREN block
    9                     | T_FUNCTION • T_IDENTIFIER T_LPAREN parameter_list T_RPAREN block

    T_IDENTIFIER  shift, and go to state 18
    T_INT         shift, and go to state 5
    T_FLOAT       shift, and go to state 6
    T_STRING      shift, and go to state 7
    T_BOOL        shift, and go to state 8
    T_CHAR        shift, and go to state 9
    T_VOID        shift, and go to state 10

    base_type  go to state 19


State 5

   19 base_type: T_INT •

    $default  reduce using rule 19 (base_type)


State 6

   20 base_type: T_FLOAT •

    $default  reduce using rule 20 (base_type)


State 7

   21 base_type: T_STRING •

    $default  reduce using rule 21 (base_type)


State 8

   23 base_type: T_BOOL •

    $default  reduce using rule 23 (base_type)


State 9

   22 base_type: T_CHAR •

    $default  reduce using rule 22 (base_type)


State 10

   24 base_type: T_VOID •

    $default  reduce using rule 24 (base_type)


State 11

    3 global_declaration_list: global_declaration_list global_declaration •

    $default  reduce using rule 3 (global_declaration_list)


State 12

    4 global_declaration: function_declaration •

    $default  reduce using rule 4 (global_declaration)


State 13

   16 type: type • T_MULTIPLY
   17     | type • T_LBRACKET T_RBRACKET
   18     | type • T_LBRACKET expression T_RBRACKET
   45 array_declaration: type • T_IDENTIFIER T_LBRACKET expression T_RBRACKET T_SEMICOLON
   46                  | type • T_IDENTIFIER T_LBRACKET T_RBRACKET T_ASSIGN array_initializer T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 20
    T_MULTIPLY    shift, and go to state 21
    T_LBRACKET    shift, and go to state 22


State 14

   15 type: base_type •
   43 variable_declaration: base_type • T_IDENTIFIER T_SEMICOLON
   44                     | base_type • T_IDENTIFIER T_ASSIGN expression T_SEMICOLON
   47 array_declaration: base_type • T_IDENTIFIER T_LBRACKET expression T_RBRACKET T_SEMICOLON
   52 pointer_declaration: base_type • T_MULTIPLY T_IDENTIFIER T_SEMICOLON
   53                    | base_type • T_MULTIPLY T_IDENTIFIER T_ASSIGN expression T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 23
    T_MULTIPLY    shift, and go to state 24

    T_IDENTIFIER  [reduce using rule 15 (type)]
    T_MULTIPLY    [reduce using rule 15 (type)]
    $default      reduce using rule 15 (type)


State 15

    5 global_declaration: variable_declaration •

    $default  reduce using rule 5 (global_declaration)


State 16

    6 global_declaration: array_declaration •

    $default  reduce using rule 6 (global_declaration)


State 17

    7 global_declaration: pointer_declaration •

    $default  reduce using rule 7 (global_declaration)


State 18

    9 function_declaration: T_FUNCTION T_IDENTIFIER • T_LPAREN parameter_list T_RPAREN block

    T_LPAREN  shift, and go to state 25


State 19

    8 function_declaration: T_FUNCTION base_type • T_IDENTIFIER T_LPAREN parameter_list T_RPAREN block

    T_IDENTIFIER  shift, and go to state 26


State 20

   45 array_declaration: type T_IDENTIFIER • T_LBRACKET expression T_RBRACKET T_SEMICOLON
   46                  | type T_IDENTIFIER • T_LBRACKET T_RBRACKET T_ASSIGN array_initializer T_SEMICOLON

    T_LBRACKET  shift, and go to state 27


State 21

   16 type: type T_MULTIPLY •

    $default  reduce using rule 16 (type)


State 22

   17 type: type T_LBRACKET • T_RBRACKET
   18     | type T_LBRACKET • expression T_RBRACKET

    T_IDENTIFIER      shift, and go to state 28
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_CHAR_LITERAL    shift, and go to state 32
    T_NULL_LITERAL    shift, and go to state 33
    T_HEX_LITERAL     shift, and go to state 34
    T_OCTAL_LITERAL   shift, and go to state 35
    T_BINARY_LITERAL  shift, and go to state 36
    T_TRUE            shift, and go to state 37
    T_FALSE           shift, and go to state 38
    T_MINUS           shift, and go to state 39
    T_MULTIPLY        shift, and go to state 40
    T_NOT             shift, and go to state 41
    T_BIT_AND         shift, and go to state 42
    T_BIT_NOT         shift, and go to state 43
    T_INCREMENT       shift, and go to state 44
    T_DECREMENT       shift, and go to state 45
    T_LPAREN          shift, and go to state 46
    T_RBRACKET        shift, and go to state 47

    expression                 go to state 48
    assignment_expression      go to state 49
    ternary_expression         go to state 50
    logical_or_expression      go to state 51
    logical_and_expression     go to state 52
    bitwise_or_expression      go to state 53
    bitwise_xor_expression     go to state 54
    bitwise_and_expression     go to state 55
    equality_expression        go to state 56
    relational_expression      go to state 57
    shift_expression           go to state 58
    additive_expression        go to state 59
    multiplicative_expression  go to state 60
    unary_expression           go to state 61
    postfix_expression         go to state 62
    primary_expression         go to state 63
    literal                    go to state 64


State 23

   43 variable_declaration: base_type T_IDENTIFIER • T_SEMICOLON
   44                     | base_type T_IDENTIFIER • T_ASSIGN expression T_SEMICOLON
   47 array_declaration: base_type T_IDENTIFIER • T_LBRACKET expression T_RBRACKET T_SEMICOLON

    T_ASSIGN     shift, and go to state 65
    T_SEMICOLON  shift, and go to state 66
    T_LBRACKET   shift, and go to state 67


State 24

   52 pointer_declaration: base_type T_MULTIPLY • T_IDENTIFIER T_SEMICOLON
   53                    | base_type T_MULTIPLY • T_IDENTIFIER T_ASSIGN expression T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 68


State 25

    9 function_declaration: T_FUNCTION T_IDENTIFIER T_LPAREN • parameter_list T_RPAREN block

    T_INT     shift, and go to state 5
    T_FLOAT   shift, and go to state 6
    T_STRING  shift, and go to state 7
    T_BOOL    shift, and go to state 8
    T_CHAR    shift, and go to state 9
    T_VOID    shift, and go to state 10

    $default  reduce using rule 10 (parameter_list)

    parameter_list  go to state 69
    parameter       go to state 70
    type            go to state 71
    base_type       go to state 72


State 26

    8 function_declaration: T_FUNCTION base_type T_IDENTIFIER • T_LPAREN parameter_list T_RPAREN block

    T_LPAREN  shift, and go to state 73


State 27

   45 array_declaration: type T_IDENTIFIER T_LBRACKET • expression T_RBRACKET T_SEMICOLON
   46                  | type T_IDENTIFIER T_LBRACKET • T_RBRACKET T_ASSIGN array_initializer T_SEMICOLON

    T_IDENTIFIER      shift, and go to state 28
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_CHAR_LITERAL    shift, and go to state 32
    T_NULL_LITERAL    shift, and go to state 33
    T_HEX_LITERAL     shift, and go to state 34
    T_OCTAL_LITERAL   shift, and go to state 35
    T_BINARY_LITERAL  shift, and go to state 36
    T_TRUE            shift, and go to state 37
    T_FALSE           shift, and go to state 38
    T_MINUS           shift, and go to state 39
    T_MULTIPLY        shift, and go to state 40
    T_NOT             shift, and go to state 41
    T_BIT_AND         shift, and go to state 42
    T_BIT_NOT         shift, and go to state 43
    T_INCREMENT       shift, and go to state 44
    T_DECREMENT       shift, and go to state 45
    T_LPAREN          shift, and go to state 46
    T_RBRACKET        shift, and go to state 74

    expression                 go to state 75
    assignment_expression      go to state 49
    ternary_expression         go to state 50
    logical_or_expression      go to state 51
    logical_and_expression     go to state 52
    bitwise_or_expression      go to state 53
    bitwise_xor_expression     go to state 54
    bitwise_and_expression     go to state 55
    equality_expression        go to state 56
    relational_expression      go to state 57
    shift_expression           go to state 58
    additive_expression        go to state 59
    multiplicative_expression  go to state 60
    unary_expression           go to state 61
    postfix_expression         go to state 62
    primary_expression         go to state 63
    literal                    go to state 64


State 28

  130 primary_expression: T_IDENTIFIER •

    $default  reduce using rule 130 (primary_expression)


State 29

  132 literal: T_INT_LITERAL •

    $default  reduce using rule 132 (literal)


State 30

  133 literal: T_FLOAT_LITERAL •

    $default  reduce using rule 133 (literal)


State 31

  134 literal: T_STRING_LITERAL •

    $default  reduce using rule 134 (literal)


State 32

  135 literal: T_CHAR_LITERAL •

    $default  reduce using rule 135 (literal)


State 33

  138 literal: T_NULL_LITERAL •

    $default  reduce using rule 138 (literal)


State 34

  139 literal: T_HEX_LITERAL •

    $default  reduce using rule 139 (literal)


State 35

  140 literal: T_OCTAL_LITERAL •

    $default  reduce using rule 140 (literal)


State 36

  141 literal: T_BINARY_LITERAL •

    $default  reduce using rule 141 (literal)


State 37

  136 literal: T_TRUE •

    $default  reduce using rule 136 (literal)


State 38

  137 literal: T_FALSE •

    $default  reduce using rule 137 (literal)


State 39

  118 unary_expression: T_MINUS • unary_expression

    T_IDENTIFIER      shift, and go to state 28
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_CHAR_LITERAL    shift, and go to state 32
    T_NULL_LITERAL    shift, and go to state 33
    T_HEX_LITERAL     shift, and go to state 34
    T_OCTAL_LITERAL   shift, and go to state 35
    T_BINARY_LITERAL  shift, and go to state 36
    T_TRUE            shift, and go to state 37
    T_FALSE           shift, and go to state 38
    T_MINUS           shift, and go to state 39
    T_MULTIPLY        shift, and go to state 40
    T_NOT             shift, and go to state 41
    T_BIT_AND         shift, and go to state 42
    T_BIT_NOT         shift, and go to state 43
    T_INCREMENT       shift, and go to state 44
    T_DECREMENT       shift, and go to state 45
    T_LPAREN          shift, and go to state 46

    unary_expression    go to state 76
    postfix_expression  go to state 62
    primary_expression  go to state 63
    literal             go to state 64


State 40

  122 unary_expression: T_MULTIPLY • unary_expression

    T_IDENTIFIER      shift, and go to state 28
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_CHAR_LITERAL    shift, and go to state 32
    T_NULL_LITERAL    shift, and go to state 33
    T_HEX_LITERAL     shift, and go to state 34
    T_OCTAL_LITERAL   shift, and go to state 35
    T_BINARY_LITERAL  shift, and go to state 36
    T_TRUE            shift, and go to state 37
    T_FALSE           shift, and go to state 38
    T_MINUS           shift, and go to state 39
    T_MULTIPLY        shift, and go to state 40
    T_NOT             shift, and go to state 41
    T_BIT_AND         shift, and go to state 42
    T_BIT_NOT         shift, and go to state 43
    T_INCREMENT       shift, and go to state 44
    T_DECREMENT       shift, and go to state 45
    T_LPAREN          shift, and go to state 46

    unary_expression    go to state 77
    postfix_expression  go to state 62
    primary_expression  go to state 63
    literal             go to state 64


State 41

  117 unary_expression: T_NOT • unary_expression

    T_IDENTIFIER      shift, and go to state 28
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_CHAR_LITERAL    shift, and go to state 32
    T_NULL_LITERAL    shift, and go to state 33
    T_HEX_LITERAL     shift, and go to state 34
    T_OCTAL_LITERAL   shift, and go to state 35
    T_BINARY_LITERAL  shift, and go to state 36
    T_TRUE            shift, and go to state 37
    T_FALSE           shift, and go to state 38
    T_MINUS           shift, and go to state 39
    T_MULTIPLY        shift, and go to state 40
    T_NOT             shift, and go to state 41
    T_BIT_AND         shift, and go to state 42
    T_BIT_NOT         shift, and go to state 43
    T_INCREMENT       shift, and go to state 44
    T_DECREMENT       shift, and go to state 45
    T_LPAREN          shift, and go to state 46

    unary_expression    go to state 78
    postfix_expression  go to state 62
    primary_expression  go to state 63
    literal             go to state 64


State 42

  123 unary_expression: T_BIT_AND • unary_expression

    T_IDENTIFIER      shift, and go to state 28
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_CHAR_LITERAL    shift, and go to state 32
    T_NULL_LITERAL    shift, and go to state 33
    T_HEX_LITERAL     shift, and go to state 34
    T_OCTAL_LITERAL   shift, and go to state 35
    T_BINARY_LITERAL  shift, and go to state 36
    T_TRUE            shift, and go to state 37
    T_FALSE           shift, and go to state 38
    T_MINUS           shift, and go to state 39
    T_MULTIPLY        shift, and go to state 40
    T_NOT             shift, and go to state 41
    T_BIT_AND         shift, and go to state 42
    T_BIT_NOT         shift, and go to state 43
    T_INCREMENT       shift, and go to state 44
    T_DECREMENT       shift, and go to state 45
    T_LPAREN          shift, and go to state 46

    unary_expression    go to state 79
    postfix_expression  go to state 62
    primary_expression  go to state 63
    literal             go to state 64


State 43

  119 unary_expression: T_BIT_NOT • unary_expression

    T_IDENTIFIER      shift, and go to state 28
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_CHAR_LITERAL    shift, and go to state 32
    T_NULL_LITERAL    shift, and go to state 33
    T_HEX_LITERAL     shift, and go to state 34
    T_OCTAL_LITERAL   shift, and go to state 35
    T_BINARY_LITERAL  shift, and go to state 36
    T_TRUE            shift, and go to state 37
    T_FALSE           shift, and go to state 38
    T_MINUS           shift, and go to state 39
    T_MULTIPLY        shift, and go to state 40
    T_NOT             shift, and go to state 41
    T_BIT_AND         shift, and go to state 42
    T_BIT_NOT         shift, and go to state 43
    T_INCREMENT       shift, and go to state 44
    T_DECREMENT       shift, and go to state 45
    T_LPAREN          shift, and go to state 46

    unary_expression    go to state 80
    postfix_expression  go to state 62
    primary_expression  go to state 63
    literal             go to state 64


State 44

  120 unary_expression: T_INCREMENT • unary_expression

    T_IDENTIFIER      shift, and go to state 28
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_CHAR_LITERAL    shift, and go to state 32
    T_NULL_LITERAL    shift, and go to state 33
    T_HEX_LITERAL     shift, and go to state 34
    T_OCTAL_LITERAL   shift, and go to state 35
    T_BINARY_LITERAL  shift, and go to state 36
    T_TRUE            shift, and go to state 37
    T_FALSE           shift, and go to state 38
    T_MINUS           shift, and go to state 39
    T_MULTIPLY        shift, and go to state 40
    T_NOT             shift, and go to state 41
    T_BIT_AND         shift, and go to state 42
    T_BIT_NOT         shift, and go to state 43
    T_INCREMENT       shift, and go to state 44
    T_DECREMENT       shift, and go to state 45
    T_LPAREN          shift, and go to state 46

    unary_expression    go to state 81
    postfix_expression  go to state 62
    primary_expression  go to state 63
    literal             go to state 64


State 45

  121 unary_expression: T_DECREMENT • unary_expression

    T_IDENTIFIER      shift, and go to state 28
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_CHAR_LITERAL    shift, and go to state 32
    T_NULL_LITERAL    shift, and go to state 33
    T_HEX_LITERAL     shift, and go to state 34
    T_OCTAL_LITERAL   shift, and go to state 35
    T_BINARY_LITERAL  shift, and go to state 36
    T_TRUE            shift, and go to state 37
    T_FALSE           shift, and go to state 38
    T_MINUS           shift, and go to state 39
    T_MULTIPLY        shift, and go to state 40
    T_NOT             shift, and go to state 41
    T_BIT_AND         shift, and go to state 42
    T_BIT_NOT         shift, and go to state 43
    T_INCREMENT       shift, and go to state 44
    T_DECREMENT       shift, and go to state 45
    T_LPAREN          shift, and go to state 46

    unary_expression    go to state 82
    postfix_expression  go to state 62
    primary_expression  go to state 63
    literal             go to state 64


State 46

  131 primary_expression: T_LPAREN • expression T_RPAREN

    T_IDENTIFIER      shift, and go to state 28
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_CHAR_LITERAL    shift, and go to state 32
    T_NULL_LITERAL    shift, and go to state 33
    T_HEX_LITERAL     shift, and go to state 34
    T_OCTAL_LITERAL   shift, and go to state 35
    T_BINARY_LITERAL  shift, and go to state 36
    T_TRUE            shift, and go to state 37
    T_FALSE           shift, and go to state 38
    T_MINUS           shift, and go to state 39
    T_MULTIPLY        shift, and go to state 40
    T_NOT             shift, and go to state 41
    T_BIT_AND         shift, and go to state 42
    T_BIT_NOT         shift, and go to state 43
    T_INCREMENT       shift, and go to state 44
    T_DECREMENT       shift, and go to state 45
    T_LPAREN          shift, and go to state 46
